// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RecursionComponent > renders correctly (map) 1`] = `
"<div data-v-5572d211=\\"\\" class=\\"recursion\\"><input data-v-5572d211=\\"\\" type=\\"text\\"><output data-v-5572d211=\\"\\">store.produce.apple</output></div>
<ul data-v-5572d211=\\"\\">
  <li data-v-5572d211=\\"\\">store.produce.apple</li>
  <li data-v-5572d211=\\"\\">store.produce.banana</li>
  <li data-v-5572d211=\\"\\">store.produce.cherry</li>
  <li data-v-5572d211=\\"\\">person.male.dad</li>
  <li data-v-5572d211=\\"\\">person.male.son</li>
  <li data-v-5572d211=\\"\\">person.female.mom</li>
  <li data-v-5572d211=\\"\\">person.female.daughter</li>
</ul>
<pre data-v-5572d211=\\"\\">{
  \\"store\\": {
    \\"produce\\": {
      \\"apple\\": \\"store.produce.apple\\",
      \\"banana\\": \\"store.produce.banana\\",
      \\"cherry\\": \\"store.produce.cherry\\"
    }
  },
  \\"person\\": {
    \\"male\\": {
      \\"dad\\": \\"person.male.dad\\",
      \\"son\\": \\"person.male.son\\"
    },
    \\"female\\": {
      \\"mom\\": \\"person.female.mom\\",
      \\"daughter\\": \\"person.female.daughter\\"
    }
  }
}</pre>"
`;

exports[`RecursionComponent > renders correctly (object) 1`] = `
"<div data-v-5572d211=\\"\\" class=\\"recursion\\"><input data-v-5572d211=\\"\\" type=\\"text\\"><output data-v-5572d211=\\"\\">store.produce.apple</output></div>
<ul data-v-5572d211=\\"\\">
  <li data-v-5572d211=\\"\\">store.produce.apple</li>
  <li data-v-5572d211=\\"\\">store.produce.banana</li>
  <li data-v-5572d211=\\"\\">store.produce.cherry</li>
  <li data-v-5572d211=\\"\\">person.male.dad</li>
  <li data-v-5572d211=\\"\\">person.male.son</li>
  <li data-v-5572d211=\\"\\">person.female.mom</li>
  <li data-v-5572d211=\\"\\">person.female.daughter</li>
</ul>
<pre data-v-5572d211=\\"\\">{
  \\"Map(2)\\": {
    \\"store =>\\": {
      \\"Map(1)\\": {
        \\"produce =>\\": {
          \\"Map(3)\\": {
            \\"apple =>\\": \\"store.produce.apple\\",
            \\"banana =>\\": \\"store.produce.banana\\",
            \\"cherry =>\\": \\"store.produce.cherry\\"
          }
        }
      }
    },
    \\"person =>\\": {
      \\"Map(2)\\": {
        \\"male =>\\": {
          \\"Map(2)\\": {
            \\"dad =>\\": \\"person.male.dad\\",
            \\"son =>\\": \\"person.male.son\\"
          }
        },
        \\"female =>\\": {
          \\"Map(2)\\": {
            \\"mom =>\\": \\"person.female.mom\\",
            \\"daughter =>\\": \\"person.female.daughter\\"
          }
        }
      }
    }
  }
}</pre>"
`;
